WORKING STATE #224 Define configuration for region to part mapping
Start to replace community by demand region.
Add configuration for mapping.